/* 
  Localizable.strings
  FootNet

  Created by Anan Sadiya on 27/02/2019.
  Copyright © 2019 FootNet. All rights reserved.
*/

"connectionError_alert"="There is no Internet conection";
"changePhoto_buttonText"="Click here to change the default photo";

//SignIn Page
"email_placeholder"="Email";
"password_placeholder"="Password";
"forgotPassword_button"="Did you forget your password?";
"forgotPassword_navBarTitle"="Recover password";
"signIn_button"="Sign In";
"signUp_button"="Don't you have an account? Sign Up";
"changeLanguage_label"="Choose the language you want:";

//error sign in form alert
"signIn_formError_alert"="Sign In Form Error.";
"signIn_dataError_alert"="Unknown username/password.";
"tryAgian_alert"="Please try again.";

//Sign Up Select Profile Type
"signUp_navBarTitle"="SignUp";
"signUp_sectionHeader"="Choose your profile:";
"player_label"="Player";
"coach_label"="Coach";
"sportDirector_label"="Sport Director";
"team_label"="Team";
"fan_label"="Fan";

//SignUp Detail
"obligatoryField"="obligatory field";
"signUp_name"="Name*";
"signUp_surname"="Surname*";
"signUp_phone"="Phone*";
"signUp_email"="Email*";
"signUp_password"="Password*";
"signUp_repeatPassword"="Repeat Password*";
"signUp_sex"="Sex*";
"signUp_bithdayDate"="Birthday*";
"signUp_nationality"="Nationality*";
"signUp_location"="Location*";
"signUp_favoritePosition"="Favorite Position*";
"signUp_preferredPositions"="Preferred Positions*";
"signUp_weight"="Weight*";
"signUp_height"="Height*";
"signUp_actualClub"="Actual Club*";
"signUp_photo_label"="Profile Photo";
"signUp_bio"="Biography";
"signUp_edit_bio"="Edit to add your biografia";
"signUp_record"="Record";
"signUp_edit_record"="Edit to add your record";

//back button
"left_button"="Back";

//back alert
"title_back_alert"="Are you sure you want to go back?";
"message_alert"="Going back will clean the register form information";
"yes_alert"="Yes";
"no_alert"="No";

//done button
"right_button"="Done";

//error sign up form alert
"signUp_formError_alert"="Sign Up Form Error!";
"fixIt_alert"="Fix It";

//sign up form errors
"emptyName_error"="Name required!\n";
"invalidName_error"="The name must have between 3 and 18 characters, space allowed!\n";
"emptySurname_error"="Surname required!\n ";
"invalidSurname_error"="The surnename must have between 3 and 18 characters, space allowed!\n";
"emptyPhone_error"="Phone required!\n";
"invalidPhone_error"="Invalid phone format!\n";
"emptyEmail_error"="Email required!\n";
"invalidEmail_error"="Invalid email format!\n";
"emptyPassword_error"="Password required!\n";
"invalidPassword_error"="Password should be at least one capital letter, one small letter, one number and 8 character length!\n";
"emptyRepeatPassword_error"="Repeat password required!\n";
"invalidRepeatPassword_error"="Repeat password should be at least one capital letter, one small letter, one number and 8 character length!\n";
"matchPasswords_error"="Password and repeat password don't match!\n";
"emptySex_error"="Sex required!\n";
"emptyBirthday_error"="Birthday required!\n";
"emptyNationality_error"="Nationality required!\n";
"emptyLocation_error"="Location required!\n";
"emptyClubActual_error"="Club actual required!\n";
"empty_error"="Club Actual required!\n";
"emptyClubActual_error"="Club actual required!\n";
"emptyFavoritePosition_error"="Favorite position required!\n";
"emptyPreferredPositions_error"="Preferred positions required!\n";
"emptyWeight_error"="Weight required!\n";
"emptyHeight_error"="Height required!\n";

//sex picker view
"male"="Male";
"female"="Female";

//nationality picker view
"ES"="Spain";
"IT"="Italy";
"FR"="France";

//location picker vew
"barcelona"="Barcelona";
"santcugat"="Sant Cugat";
"sabadell"="Sabadell";

//actual club picker vew
"ud_parc"="UD PARC";
"atc"="Hospitalense";
"fcb"="FC Barcleona";

//favorite position picker vew
"pos1"="Goalkeeper";
"pos2"="Left back";
"pos3"="Centre back";
"pos4"="Right back";
"pos5"="Centre medfield";
"pos6"="Left midfield";
"pos7"="Playmaker";
"pos8"="Right midfield";
"pos9"="Left forward";
"pos10"="Striker";
"pos11"="Right forward";

//preferred position picker vew
"pos1"="Goalkeeper";
"pos2"="Left back";
"pos3"="Centre back";
"pos4"="Right back";
"pos5"="Centre medfield";
"pos6"="Left midfield";
"pos7"="Playmaker";
"pos8"="Right midfield";
"pos9"="Left forward";
"pos10"="Striker";
"pos11"="Right forward";

//TabBar
"homeTabBar"="Home";
"offersTabBar"="Offers";
"offersStatusTabBar"="Offers Status";
"searchTabBar"="Search";
"notificationsTabBar"="Notifications";

//Right home
"workLabel"="iOS Developer";
"doubtEmailMessageLabel"="Do you have any doubt?";
"donateEmailMessageLabel"="Do you want to donate money?";
"followLabel"="Follow me on:";

//Left home
"myProfileLabel"="My profile";
"editProfileLabel"="Edit profile";
"myPublicationsLabel"="My publications";
"myFriendsLabel"="My friends";
"myContactsLabel"="My contacts";
"signOutLabel"="Sign out";
"signOut_alert"="Are you sure you want to sign out?";
"deactivateAccoutLabel"="Deactivate account";
"deactivateAccout_alert"="Are you sure you want to deactivate your account?";
"aboutUsLabel"="About Us";

//My friends
"followers_scTitle"="Followers";
"following_scTitle"="Following";

//Offers status
"acceptedOffers_scTitle"="Accepted";
"pendingOffers_scTitle"="Pending";
"rejectedOffers_scTitle"="Rejected";
"acceptedOffers_detail"=" has not accepted your request to the offer ";
"pendingOffers_detail"=" has not reacted yet to your request to the offer ";
"rejectedOffers_detail"=" has rejected your request to the offer ";

//Notifications
"notificationsOffer_detail"=" has requested your offer: ";
"notificationsPost_detail"=" has reacted to your text post: ";
"notificationsPhoto_detail"=" has reacted to your photo post.";

//Search
"follow_button"="Follow";
"following_button"="Following";
"Search_users"="Search users";

//Offers
"filter_button"="Filter";
"seeMore_button"="See more";
"offerDetail_title"="Offer details";

//Offer detail
"request_button"="Request";
"requested_button"="Requested";

//Countries
"AFG" = "Afghanistan";
"ALA" = "Åland Islands";
"ALB" = "Albania";
"DZA" = "Algeria";
"ASM" = "American Samoa";
"AND" = "Andorra";
"AGO" = "Angola";
"AIA" = "Anguilla";
"ATA" = "Antarctica";
"ATG" = "Antigua and Barbuda";
"ARG" = "Argentina";
"ARM" = "Armenia";
"ABW" = "Aruba";
"AUS" = "Australia";
"AUT" = "Austria";
"AZE" = "Azerbaijan";
"BHS" = "Bahamas";
"BHR" = "Bahrain";
"BGD" = "Bangladesh";
"BRB" = "Barbados";
"BLR" = "Belarus";
"BEL" = "Belgium";
"BLZ" = "Belize";
"BEN" = "Benin";
"BMU" = "Bermuda";
"BTN" = "Bhutan";
"BOL" = "Bolivia (Plurinational State of)";
"BES" = "Bonaire, Sint Eustatius and Saba";
"BIH" = "Bosnia and Herzegovina";
"BWA" = "Botswana";
"BVT" = "Bouvet Island";
"BRA" = "Brazil";
"IOT" = "British Indian Ocean Territory";
"BRN" = "Brunei Darussalam";
"BGR" = "Bulgaria";
"BFA" = "Burkina Faso";
"BDI" = "Burundi";
"CPV" = "Cabo Verde";
"KHM" = "Cambodia";
"CMR" = "Cameroon";
"CAN" = "Canada";
"CYM" = "Cayman Islands";
"CAF" = "Central African Republic";
"TCD" = "Chad";
"CHL" = "Chile";
"CHN" = "China";
"CXR" = "Christmas Island";
"CCK" = "Cocos (Keeling) Islands";
"COL" = "Colombia";
"COM" = "Comoros";
"COG" = "Congo";
"COD" = "Congo, Democratic Republic of the";
"COK" = "Cook Islands";
"CRI" = "Costa Rica";
"CIV" = "Côte d'Ivoire";
"HRV" = "Croatia";
"CUB" = "Cuba";
"CUW" = "Curaçao";
"CYP" = "Cyprus";
"CZE" = "Czechia";
"DNK" = "Denmark";
"DJI" = "Djibouti";
"DMA" = "Dominica";
"DOM" = "Dominican Republic";
"ECU" = "Ecuador";
"EGY" = "Egypt";
"SLV" = "El Salvador";
"GNQ" = "Equatorial Guinea";
"ERI" = "Eritrea";
"EST" = "Estonia";
"SWZ" = "Eswatini";
"ETH" = "Ethiopia";
"FLK" = "Falkland Islands (Malvinas)";
"FRO" = "Faroe Islands";
"FJI" = "Fiji";
"FIN" = "Finland";
"FRA" = "France";
"GUF" = "French Guiana";
"PYF" = "French Polynesia";
"ATF" = "French Southern Territories";
"GAB" = "Gabon";
"GMB" = "Gambia";
"GEO" = "Georgia";
"DEU" = "Germany";
"GHA" = "Ghana";
"GIB" = "Gibraltar";
"GRC" = "Greece";
"GRL" = "Greenland";
"GRD" = "Grenada";
"GLP" = "Guadeloupe";
"GUM" = "Guam";
"GTM" = "Guatemala";
"GGY" = "Guernsey";
"GIN" = "Guinea";
"GNB" = "Guinea-Bissau";
"GUY" = "Guyana";
"HTI" = "Haiti";
"HMD" = "Heard Island and McDonald Islands";
"VAT" = "Holy See";
"HND" = "Honduras";
"HKG" = "Hong Kong";
"HUN" = "Hungary";
"ISL" = "Iceland";
"IND" = "India";
"IDN" = "Indonesia";
"IRN" = "Iran (Islamic Republic of)";
"IRQ" = "Iraq";
"IRL" = "Ireland";
"IMN" = "Isle of Man";
"ISR" = "Israel";
"ITA" = "Italy";
"JAM" = "Jamaica";
"JPN" = "Japan";
"JEY" = "Jersey";
"JOR" = "Jordan";
"KAZ" = "Kazakhstan";
"KEN" = "Kenya";
"KIR" = "Kiribati";
"PRK" = "Korea (Democratic People's Republic of)";
"KOR" = "Korea, Republic of";
"KWT" = "Kuwait";
"KGZ" = "Kyrgyzstan";
"LAO" = "Lao People's Democratic Republic";
"LVA" = "Latvia";
"LBN" = "Lebanon";
"LSO" = "Lesotho";
"LBR" = "Liberia";
"LBY" = "Libya";
"LIE" = "Liechtenstein";
"LTU" = "Lithuania";
"LUX" = "Luxembourg";
"MAC" = "Macao";
"MDG" = "Madagascar";
"MWI" = "Malawi";
"MYS" = "Malaysia";
"MDV" = "Maldives";
"MLI" = "Mali";
"MLT" = "Malta";
"MHL" = "Marshall Islands";
"MTQ" = "Martinique";
"MRT" = "Mauritania";
"MUS" = "Mauritius";
"MYT" = "Mayotte";
"MEX" = "Mexico";
"FSM" = "Micronesia (Federated States of)";
"MDA" = "Moldova, Republic of";
"MCO" = "Monaco";
"MNG" = "Mongolia";
"MNE" = "Montenegro";
"MSR" = "Montserrat";
"MAR" = "Morocco";
"MOZ" = "Mozambique";
"MMR" = "Myanmar";
"NAM" = "Namibia";
"NRU" = "Nauru";
"NPL" = "Nepal";
"NLD" = "Netherlands";
"NCL" = "New Caledonia";
"NZL" = "New Zealand";
"NIC" = "Nicaragua";
"NER" = "Niger";
"NGA" = "Nigeria";
"NIU" = "Niue";
"NFK" = "Norfolk Island";
"MKD" = "North Macedonia";
"MNP" = "Northern Mariana Islands";
"NOR" = "Norway";
"OMN" = "Oman";
"PAK" = "Pakistan";
"PLW" = "Palau";
"PSE" = "Palestine, State of";
"PAN" = "Panama";
"PNG" = "Papua New Guinea";
"PRY" = "Paraguay";
"PER" = "Peru";
"PHL" = "Philippines";
"PCN" = "Pitcairn";
"POL" = "Poland";
"PRT" = "Portugal";
"PRI" = "Puerto Rico";
"QAT" = "Qatar";
"REU" = "Réunion";
"ROU" = "Romania";
"RUS" = "Russian Federation";
"RWA" = "Rwanda";
"BLM" = "Saint Barthélemy";
"SHN" = "Saint Helena, Ascension and Tristan da Cunha";
"KNA" = "Saint Kitts and Nevis";
"LCA" = "Saint Lucia";
"MAF" = "Saint Martin (French part)";
"SPM" = "Saint Pierre and Miquelon";
"VCT" = "Saint Vincent and the Grenadines";
"WSM" = "Samoa";
"SMR" = "San Marino";
"STP" = "Sao Tome and Principe";
"SAU" = "Saudi Arabia";
"SEN" = "Senegal";
"SRB" = "Serbia";
"SYC" = "Seychelles";
"SLE" = "Sierra Leone";
"SGP" = "Singapore";
"SXM" = "Sint Maarten (Dutch part)";
"SVK" = "Slovakia";
"SVN" = "Slovenia";
"SLB" = "Solomon Islands";
"SOM" = "Somalia";
"ZAF" = "South Africa";
"SGS" = "South Georgia and the South Sandwich Islands";
"SSD" = "South Sudan";
"ESP" = "Spain";
"LKA" = "Sri Lanka";
"SDN" = "Sudan";
"SUR" = "Suriname";
"SJM" = "Svalbard and Jan Mayen";
"SWE" = "Sweden";
"CHE" = "Switzerland";
"SYR" = "Syrian Arab Republic";
"TWN" = "Taiwan, Province of China";
"TJK" = "Tajikistan";
"TZA" = "Tanzania, United Republic of";
"THA" = "Thailand";
"TLS" = "Timor-Leste";
"TGO" = "Togo";
"TKL" = "Tokelau";
"TON" = "Tonga";
"TTO" = "Trinidad and Tobago";
"TUN" = "Tunisia";
"TUR" = "Turkey";
"TKM" = "Turkmenistan";
"TCA" = "Turks and Caicos Islands";
"TUV" = "Tuvalu";
"UGA" = "Uganda";
"UKR" = "Ukraine";
"ARE" = "United Arab Emirates";
"GBR" = "United Kingdom of Great Britain and Northern Ireland";
"USA" = "United States of America";
"UMI" = "United States Minor Outlying Islands";
"URY" = "Uruguay";
"UZB" = "Uzbekistan";
"VUT" = "Vanuatu";
"VEN" = "Venezuela (Bolivarian Republic of)";

//home
"publish_button"="Publish";

//profile
"email_label"="Email: ";
"phone_label"="Phone: ";
"emailFollow_label"="Follow me to see my email";
"phoneFollow_label"="Follow me to see my phone number";
"sex_label"="Sex: ";
"birthday_label"="Birthday: ";
"nationality_label"="Nationality: ";
"location_label"="Location: ";
"height_label"="Height: ";
"weight_label"="Weight: ";
"actualClub_label"="Actual Club: ";
"favoritePosition_label"="Favorite Position: ";
"bio_label"="Biography: ";
"record_label"="Record: ";
"accept_button"="Accept";
"reejct_button"="Reject";

//publish
"publish_sectionHeader"="I want to publish:";
"publish_offer"="Offer";
"publish_text"="Text";
"publish_photo"="Photo";

//publish offer
"publishOffer_navTitle"="Publish offer";
"publishOffer_title"="Edit to add your offer title";
"publishOffer_text"="Edit to add your offer text";
"publishOffer_photoLabel"="Offer Photo";
"publishOffer_PhotoButton"="Click here to change the default photo";

//publish text
"publishText_navTitle"="Publish text";
"publishText_title"="Edit to add your publication text";

//publish photo
"publishPhoto_navTitle"="Publish photo";
"publishPhoto_photoLabel"="Publication Photo";

//Edit profile
"editPhoto_photoLabel"="Edit photo";
"editProfileChanePhoto_buttonText"="Click here to change your profile photo";

//Forget password
"recoverPassword_label"="Enter your email address, please:";
"recoverPassword_button"="Recover password";
"recoverPassword_subject"=" [EN] Recover password";
"recoverPassword_content1"="Hi, \n my email is: ";
"recoverPassword_content2"="\nI'd like to recover my password. \nThanks";

//Profile types
"myProfileTitle"="My profile";
"requestedProfileTitle"="Requested profile";
"searchedProfileTitle"="Searched profile";

"accept_button"="Accept";
"reject_button"="Reject";
