...
                            <tabBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="YQf-8R-5A6">
                                <rect key="frame" x="0.0" y="618" width="375" height="49"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <items>
                                    <tabBarItem systemItem="favorites" id="gxD-k6-6yt"/>
                                    <tabBarItem systemItem="more" id="OLz-YJ-p8j"/>
                                </items>
                            </tabBar>
                        </subviews>
                        <color key="backgroundColor" red="0.33333334329999997" green="0.020119360070000002" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                        <viewLayoutGuide key="safeArea" id="YTi-ek-fc8"/>
                    </view>
                    <tabBarItem key="tabBarItem" title="Item" id="BHz-4J-FMW"/>
                    <navigationItem key="navigationItem" id="Ehg-4w-hSc">
                        <barButtonItem key="leftBarButtonItem" image="menuButton" id="vw8-iH-zgC">
                            <connections>
                                <action selector="homeLeftTapped:" destination="cIo-ME-JoZ" id="4yt-tG-eSp"/>
                            </connections>
                        </barButtonItem>
                        <barButtonItem key="rightBarButtonItem" title="infi" id="5Ue-Pf-RzP"/>
                    </navigationItem>
...
