...
        definesPresentationContext = true
    }
    
    //Back button navigationbar
    private func createLeftButton() {
        self.navigationItem.hidesBackButton = true
        let imageName = "backButton"
        let image = UIImage(named: imageName)
        let newLeftBarButtonItem = UIBarButtonItem(image: image, style: .plain, target: self, action: #selector(SignUpSelectProfileTableViewController.back(sender:)))
        newLeftBarButtonItem.tintColor = UIColor.colorText
        self.navigationItem.leftBarButtonItem = newLeftBarButtonItem
    }
    
...
